<resources>
    <string name="app_name">PROG20082Final</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_a_workout">Add a Workout</string>
    <string name="biking">Biking</string>
    <string name="workout_name">Workout Name:</string>
    <string name="name_of_workout">name of workout</string>
    <string name="workout_type">Workout Type:</string>
    <string name="date">Date:</string>
    <string name="enter_date_of_workout">enter date of workout</string>
    <string name="duration">Duration:</string>
    <string name="enter_workout_duration">enter workout duration</string>
    <string name="distance">Distance:</string>
    <string name="enter_distance_km">enter distance (km)</string>
    <string name="time">Time:</string>
    <string name="time_of_workout">time of workout</string>
    <string name="submit">submit</string>
    <string name="hike">Hike</string>
    <string name="hiking">Hiking</string>
    <string name="swimming">Swimming</string>
    <string name="welcome_to_soul_fitness">Welcome to Soul Fitness</string>
    <string name="which_workout_would_you_like_to_add_today">Which workout would you like to add today?</string>
</resources>