<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".FirstFragment">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="108dp"
        android:layout_height="100dp"
        android:layout_marginBottom="30dp"
        android:src="@mipmap/ic_logo"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="111dp" />

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/welcome_to_soul_fitness"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/addHikeBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addWorkoutMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/which_workout_would_you_like_to_add_today"
        android:textSize="18sp" />

    <Button
        android:id="@+id/addHikeBtn"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/hiking"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeMessage" />

    <Button
        android:id="@+id/addBikeBtn"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/biking" />

    <Button
        android:id="@+id/addSwimBtn"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:text="@string/swimming" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
</LinearLayout>