<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".input.AddSwimmingFragment">

    <TextView
        android:id="@+id/add_a_workout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/add_a_workout"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/SwimmingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/swimming"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_a_workout"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="470dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.30"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/workout_title"
            android:layout_width="132dp"
            android:layout_height="61dp"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/workout_name" />

        <EditText
            android:id="@+id/workout_title_input"
            android:layout_width="171dp"
            android:layout_height="60dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/name_of_workout"
            android:inputType="textPersonName"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="393dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.30"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/workout_type"
            android:layout_width="134dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/workout_type" />

        <TextView
            android:id="@+id/swimmingText"
            android:layout_width="172dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/swimming" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="319dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.30"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/workout_date"
            android:layout_width="169dp"
            android:layout_height="61dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/date" />

        <EditText
            android:id="@+id/workout_date_input"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints="mm/dd/yy"
            android:ems="10"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:hint="@string/enter_date_of_workout"
            android:inputType="date" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="160dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.30"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/workout_duration"
            android:layout_width="168dp"
            android:layout_height="61dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/duration" />

        <EditText
            android:id="@+id/workout_duration_input"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints="@string/enter_workout_duration"
            android:ems="10"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:hint="@string/enter_workout_duration"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="80dp"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.30"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/workout_distance"
            android:layout_width="6dp"
            android:layout_height="58dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/distance" />

        <EditText
            android:id="@+id/workout_distance_input"
            android:layout_width="47dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autofillHints="@string/enter_distance_km"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:hint="@string/enter_distance_km"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="240dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.30"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/workout_time"
            android:layout_width="168dp"
            android:layout_height="59dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/time" />

        <EditText
            android:id="@+id/workout_time_input"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:hint="@string/time_of_workout"
            android:inputType="time" />
    </LinearLayout>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

</androidx.constraintlayout.widget.ConstraintLayout>